--- a/architecture/index.html
+++ b/architecture/index.html
@@ -115,13 +115,8 @@
   <!--body-->
 
   <div class="body-margin">
+    <div class="blank-lineheight-xl"></div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <div class="body-landing">
       <div class="body-intro">
         <div class="t-hello" id="t-hello-1550">HELLO, </div>
@@ -188,7 +183,7 @@
     </div>
 
     <!--architecture 1-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--architecture 2-->
     <div id="ytrigger-arch2">
@@ -211,7 +206,7 @@
       </div>
     </div>
     <!--architecture 2-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
     <!--THESIS -->
     <div id="ytrigger-arch3">
       <div class="body-h">
@@ -234,7 +229,7 @@
       </div>
     </div>
     <!--THESIS -->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
     <!--MANIFOLD GROUND -->
       <div class="body-h" id="ytrigger-arch4">
         <div class="body-left body-txt">
@@ -253,7 +248,7 @@
         </div>
       </div>
     <!--MANIFOLD GROUND -->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--architecture 3-->
     <div id="ytrigger-arch5">
@@ -276,7 +271,7 @@
       </div>
     </div>
     <!--architecture 3-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
     <!--CURVES-->
     <div id="ytrigger-arch6">
       <div class="body-h">
@@ -296,7 +291,7 @@
       </div>
     </div>
     <!--CURVES-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
     <!--LACMA-->
     <div id="ytrigger-arch7">
       <div class="body-h">
@@ -315,7 +310,7 @@
       </div>
     </div>
     <!-- LACMA-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
 
 
@@ -339,7 +334,7 @@
     </div>
 
     <!--architecture 6-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
 
 
@@ -357,12 +352,8 @@
 
 
   <!--footer-->
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+  <div class="blank-lineheight-xl"></div>
+
   <!--back to top-->
   <button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
     <img id="bottom-arrow" class="ArrowHover" src="../arrow-top.svg" alt="back to top">
