--- a/index.html
+++ b/index.html
@@ -114,10 +114,7 @@
 
   <!--body-->
   <div class="body-margin">
-    <br> <br> <br> <br>
-
-
-
+    <div class="blank-lineheight-xl"></div>
     <div class="body-landing">
       <div class="body-intro">
         <div class="t-hello" id="t-hello-1550">HELLO, </div>
@@ -173,7 +170,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/gardeners_hub" class="t-title-m">  GARDENERS HUB</a>
+                <a href="/project/gardeners_hub" class="t-title-m"> GARDENERS HUB</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text-s">A marketplace for local community</p>
                 <p class="t-text-s">May 2021 - August 2021 </p>
@@ -181,7 +178,7 @@
               <div class="vertical-line">
               </div>
               <div class="body-left">
-                <a href="/gardeners_hub">
+                <a href="/project/gardeners_hub">
                   <img id="carousel-project-img" src="./layout_gardenershub.png" alt="Architecture">
                 </a>
               </div>
@@ -192,7 +189,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/meal_planner" class="t-title-m"> MEAL PLANNER                </a>
+                <a href="/project/meal_planner" class="t-title-m"> MEAL PLANNER </a>
                 <p class="horizontal-line"></p>
                 <p class="t-text-s">A mobile app helps planning a healthy meal
 
@@ -202,7 +199,7 @@
               <div class="vertical-line">
               </div>
               <div class="body-left">
-                <a href="/meal_planner">
+                <a href="/project/meal_planner">
                   <img id="carousel-project-img" src="./layout_mealplanner.png" alt="GARDENERS HUB">
                 </a>
               </div>
@@ -213,16 +210,18 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/alltrails" class="t-title-m">   REDESIGN ALLTRAILS APP </a>
+                <a href="/alltrails" class="t-title-m"> REDESIGN ALLTRAILS APP </a>
                 <p class="horizontal-line"></p>
-                <p class="t-text-s">Adding comparison features to help user planning their hiking trip</p>
+                <p class="t-text-s">Adding comparison features to help user planning their hiking
+                  trip</p>
                 <p class="t-text-s">August 2021 </p>
               </div>
               <div class="vertical-line">
               </div>
               <div class="body-left">
                 <a href="/alltrails">
-                  <img id="carousel-project-img" src="./layout_alltrails.png" alt="REDESIGN ALLTRAILS APP">
+                  <img id="carousel-project-img" src="./layout_alltrails.png"
+                    alt="REDESIGN ALLTRAILS APP">
                 </a>
               </div>
             </div>
@@ -260,7 +259,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title-m">RECREATION COMMONS</a>
+                <a href="/architecture/recreation_commons/" class="t-title-m">RECREATION COMMONS</a>
                 <p class="horizontal-line"></p>
 
                 <p class="t-text-s">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
@@ -273,7 +272,7 @@
               <div class="vertical-line">
               </div>
               <div class="body-left">
-                <a href="/architecture">
+                <a href="/architecture/recreation_commons/">
                   <img id="rc" src="./ar_1.svg" alt="Architecture">
                 </a>
               </div>
@@ -284,7 +283,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title-m">NARROW STRIPES</a>
+                <a href="/architecture/narrow_stripes/" class="t-title-m">NARROW STRIPES</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text-s">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
                 <p class="t-text-s">Site: Location: Hyde Park, London </p>
@@ -295,7 +294,7 @@
               <div class="vertical-line">
               </div>
               <div class="body-left">
-                <a href="/architecture">
+                <a href="/architecture/narrow_stripes/">
                   <img id="photos" src="./ar_2.jpg" alt="Architecture">
                 </a>
               </div>
@@ -327,7 +326,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title-m">MANIFOLD GROUND </a>
+                <a href="/architecture/manifold_ground/" class="t-title-m">MANIFOLD GROUND </a>
                 <p class="horizontal-line"></p>
                 <p class="t-text-s">[IN]ARCH ADV, SUMMERS 2014</p>
                 <p class="t-text-s">Summer Program, CED, UC Berkeley</p>
@@ -338,7 +337,7 @@
               <div class="vertical-line">
               </div>
               <div class="body-left">
-                <a href="/architecture">
+                <a href="/architecture/manifold_ground/">
                   <img id="photos" src="./ar_4.jpg" alt="Architecture">
                 </a>
               </div>
@@ -350,7 +349,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title-m">ON ORDER: DIFFERENTIATED CONTINUITY OF
+                <a href="/architecture/thesis_studio/" class="t-title-m">ON ORDER: DIFFERENTIATED
+                  CONTINUITY OF
                   OBJECTS</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text-s">THESIS STUDIO, FALL 2018 - SPRING 2019</p>
@@ -360,7 +360,7 @@
               <div class="vertical-line">
               </div>
               <div class="body-left">
-                <a href="/architecture">
+                <a href="/architecture/thesis_studio/">
                   <img id="photos" src="./ar_5.jpg" alt="Architecture">
                 </a>
               </div>
@@ -372,7 +372,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title-m">THE ROTATION OF CURVES</a>
+                <a href="/architecture/recovery_of_river_edges/" class="t-title-m">THE ROTATION OF
+                  CURVES</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text-s">Introduction to Architecture Studio 1, Fall 2015</p>
                 <p class="t-text-s">M. Arch, CED, UC Berkeley</p>
@@ -381,7 +382,7 @@
               <div class="vertical-line">
               </div>
               <div class="body-left">
-                <a href="/architecture">
+                <a href="/architecture/recovery_of_river_edges/">
                   <img id="photos" src="./ar_6.jpg" alt="Architecture">
                 </a>
               </div>
@@ -393,7 +394,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title-m">RECOVERY OF RIVER EDGES</a>
+                <a href="/architecture/the_rotation_of_curves/" class="t-title-m">RECOVERY OF RIVER
+                  EDGES</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text-s">Introduction to Architecture Studio 2, Spring 2016</p>
                 <p class="t-text-s">M. Arch, CED, UC Berkeley</p>
@@ -407,7 +409,7 @@
               <div class="vertical-line">
               </div>
               <div class="body-left">
-                <a href="/architecture">
+                <a href="/architecture/the_rotation_of_curves/">
                   <img id="photos" src="./ar_7.jpg" alt="Architecture">
                 </a>
               </div>
@@ -829,23 +831,31 @@
     <!-- photography new-->
     <!-- content-->
     <div class="content-tl">
-      <p class="t-text-l"> About Me
-      </p>
+      <p class="t-text-l"> About Me </p>
       <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
 
     </div>
     <!-- content-->
-    <!-- about me-->
+  </div>
+
+  <!-- about me-->
+  <div class="body-margin">
     <div class="t-title-m body-v">
       <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/Resume_vw.pdf"
         class="text-about-resume"> Download My Resume
       </a>
     </div>
-    <br>
+  </div>
+  <div class="blank-lineheight-m"></div>
+
+
+  <div class="body-margin">
     <div class="about-me">
       <div class="body-v">
         <div class="body-left t-title-l" data-aos="fade-up">
           EDUCATION </div>
+        <div class="blank-lineheight-m"></div>
+
         <div class="body-v">
           <p class="t-title-m">UC Berkeley
           </p>
@@ -853,13 +863,13 @@
           <p class="t-text-m">Master of Architecture</p>
           <p class="t-text-m">Building Science / Technology</p>
         </div>
-        <br>
+        <div class="blank-lineheight-m"></div>
+
         <div class="body-v">
           <p class="t-title-m">Beijing University of Tech</p>
           <p class="t-time">May 2009 - August 2013 </p>
           <p class="t-text-m">Bachelor of Art and Design</p>
           <p class="t-text-m">Landscape Design</p>
-
         </div>
       </div>
 
@@ -869,35 +879,39 @@
         <div class="body-left t-title-l" data-aos="fade-up">
           SKILL&TOOLS
         </div>
+
+        <div class="blank-lineheight-m"></div>
+
+
         <div class="body-v">
           <p class="t-title-m">UI/UX
           </p>
           <p class="t-text-m">Sketch, Adobe XD, Figma</p>
-
-
         </div>
+        <br>
 
         <div class="body-v">
           <p class="t-title-m">Programming</p>
           <p class="t-text-m">HTML, CSS, JavaScript</p>
           <p class="t-text-m">jQuery</p>
-
-
         </div>
+        <br>
+
 
         <div class="body-v">
           <p class="t-title-m">2D Graphic</p>
           <p class="t-text-m">Adobe Suite (Illustrator, Photoshop, InDesign)</p>
           <p class="t-text-m">AutoCAD</p>
         </div>
+        <br>
 
         <div class="body-v">
           <p class="t-title-m">3D Modelling and VR</p>
           <p class="t-text-m">3Dmax Studio, Rhino, Sketchup</p>
           <p class="t-text-m">Grasshopper, Ladybug, DIVA</p>
           <p class="t-text-m">Unity</p>
-
         </div>
+        <br>
 
         <div class="body-v">
           <p class="t-title-m">Design Research
@@ -905,6 +919,8 @@
           <p class="t-text-m">Affinity Diagramming</p>
           <p class="t-text-m">Experience Prototyping</p>
         </div>
+        <br>
+
         <div class="body-v">
           <p class="t-title-m">Fabrication
           </p>
@@ -917,12 +933,16 @@
       <div class="body-v">
         <div class="body-left t-title-l" data-aos="fade-up">
           EXPERIENCE </div>
+        <div class="blank-lineheight-m"></div>
+
+
         <div class="body-v">
           <p class="t-title-m">Buro Ole Scheeren</p>
           <p class="t-time">August 2017 - July 2018</p>
           <p class="t-text-m">Beijing, China</p>
           <p class="t-text-m">Architectural Designer</p>
         </div>
+        <br>
 
         <div class="body-v">
           <p class="t-title-m">In Design Studio</p>
@@ -930,6 +950,7 @@
           <p class="t-text-m">New York, U.S.</p>
           <p class="t-text-m">Summer Intern</p>
         </div>
+        <br>
 
         <div class="body-v">
           <p class="t-title-m">PDI Design Group</p>
@@ -937,6 +958,7 @@
           <p class="t-text-m">Beijing, China</p>
           <p class="t-text-m">Architectural Designer</p>
         </div>
+        <br>
 
         <div class="body-v">
           <p class="t-title-m">Do Union</p>
@@ -952,20 +974,21 @@
 
 
     </div>
-
-    <!-- about me-->
-
-
-
-
-    <br>
-
-
-
-
-
-
   </div>
+  <div class="blank-lineheight-m"></div>
+
+  <img src="./me.jpg" alt="right">
+  <!-- about me-->
+
+
+
+
+
+
+
+
+
+
 
 
 
