--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -119,7 +119,7 @@
   <!--about gardenershub-->
   <div class="body-h-project bg-color-gh" id="bg-color-trigger">
     <div class="body-left body-img float">
-      <img src="../layout_gardenershub.png" alt="Gardenrs' Hub">
+      <img src="../../layout_gardenershub.png" alt="Gardenrs' Hub">
     </div>
     <div class="vertical-line-blank"></div>
     <div class="body-right body-txt">
@@ -137,9 +137,8 @@
       </p>
     </div>
   </div>
-  <br>
-  <br>
-  <br>
+  <div class="blank-lineheight-xl"></div>
+
   <!--about gardenershub-->
 
 
@@ -153,10 +152,10 @@
   <!-- content-->
   <!-- initial concepts -->
 
-  <div class="row center-h bg-color-gh1 align-bottom" id="bg-color-opc">
+  <div class="row center-h bg-color-gh1 align-bottom " id="bg-color-opc">
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr">
-      <img class="icon-m float" src="icon_concepts1.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+      <img class="icon-m" src="icon_concepts1.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Share &amp; Sell </P>
       <P class="t-text-s"> &#183; Plants Nearby / Map</P>
@@ -165,8 +164,8 @@
       <P class="t-text-s"> &#183; Plants by Indoor and Outdoor</P>
     </div>
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr">
-      <img class="icon-m float" src="icon_concepts2.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+      <img class="icon-m" src="icon_concepts2.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Social Network </P>
       <P class="t-text-s"> &#183; Local Social Network</P>
@@ -175,8 +174,8 @@
       <P class="t-text-s"> &#183; Sharing Plant Decoration Ideas</P>
     </div>
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr">
-      <img class="icon-m float" src="icon_concepts3.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+      <img class="icon-m" src="icon_concepts3.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Plant Profile </P>
       <P class="t-text-s"> &#183; Plant Photos / Identify plants</P>
@@ -186,8 +185,8 @@
       <P class="t-text-s"> &#183; Ventilation</P>
     </div>
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr">
-      <img class="icon-m float" src="icon_concepts4.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+      <img class="icon-m" src="icon_concepts4.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Plant Care </P>
       <P class="t-text-s"> &#183; Plants Nearby / Map</P>
@@ -281,7 +280,7 @@
     </div>
   </div>
   <!--img 4-->
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
 
   <!-- content-->
@@ -292,6 +291,7 @@
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
+
     <!--Problem and solution-->
     <div class="row-change center-v margin">
       <div class="column">
@@ -326,7 +326,7 @@
       </div>
     </div>
     <!--Problem solution Process-->
-    <br>
+    <div class="blank-lineheight-xl"></div>
 
 
     <!--diagrams and txt-->
@@ -335,7 +335,7 @@
 
       <div class="column center-v">
         <P class="center-v center-h color-grey circle-gh  t-subtitle-l">Empathize </P>
-        <br>
+        <div class="blank-lineheight-m"></div>
 
         <P class="t-text-s"> &#183; User Research</P>
         <P class="t-text-s"> &#183; Competitive Analysis </P>
@@ -345,7 +345,7 @@
 
       <div class="column center-v">
         <P class="center-v center-h color-grey circle-gh  t-subtitle-l">Define </P>
-        <br>
+        <div class="blank-lineheight-m"></div>
 
         <P class="t-text-s"> &#183; Contextual Inquiries </P>
         <P class="t-text-s"> &#183; Identifying Pain Points </P>
@@ -354,7 +354,7 @@
 
       <div class="column center-v">
         <P class="center-v center-h color-grey circle-gh  t-subtitle-l">Ideate </P>
-        <br>
+        <div class="blank-lineheight-m"></div>
         <P class="t-text-s"> &#183; Information Architecture</P>
         <P class="t-text-s"> &#183; User Flow </P>
         <P class="t-text-s"> &#183; Selected Initial Concepts </P>
@@ -363,7 +363,7 @@
       <div class="column center-v">
         <P class="center-v center-h color-grey circle-gh  t-subtitle-l">Prototype
         </P>
-        <br>
+        <div class="blank-lineheight-m"></div>
 
         <P class="t-text-s"> &#183; Prototyping </P>
         <P class="t-text-s"> &#183; Iteration Testing</P>
@@ -372,7 +372,7 @@
 
       <div class="column center-v">
         <P class="center-v center-h color-grey circle-gh  t-subtitle-l">Final Design </P>
-        <br>
+        <div class="blank-lineheight-m"></div>
 
         <P class="t-text-s"> &#183; On-boarding</P>
         <P class="t-text-s"> &#183; Login & Register </P>
@@ -422,12 +422,7 @@
       </div>
     </div>
 
-
-
-
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
 
 
     <div class="column">
@@ -441,9 +436,8 @@
         18 months, and 36
         months of horticultural experience.</p>
     </div>
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
 
     <div class="row-change center-v margin">
       <div class="column">
@@ -468,9 +462,8 @@
           gardeners </p>
       </div>
     </div>
-    <br>
-    <br>
-    <br>
+    <div class="blank-lineheight-xl"></div>
+
     <div class="column margin">
       <div class="row">
         <P class="t-title-m">COMPETITIVE ANALYSIS</P>
@@ -1059,19 +1052,15 @@
             </g>
           </svg>
         </div>
-
-
       </div>
     </div>
   </div>
-  <br>
-  <br>
-  <br>
+
   <!-- 01 -->
+  <div class="blank-lineheight-xl"></div>
 
   <!-- 02 -->
   <div class="body-margin">
-
     <P class="text-project-numbers color-gh">02</P>
     <div class="row-change center-v margin">
       <div class="column">
@@ -1113,36 +1102,42 @@
 
   <div class="row center-h bg-color-gh1 align-bottom" id="bg-color-opc1">
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-bottom">
-      <img class="icon-m float" src="icon_ci_1.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding float">
+      <img class="icon-m " src="icon_ci_1.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Method </P>
+      <div class="blank-lineheight-s"></div>
+
       <P class="t-text-s"> &#183; How to identify problem?</P>
       <P class="t-text-s"> &#183; how to find information? </P>
       <P class="t-text-s"> &#183; did all information work? </P>
     </div>
 
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-bottom">
-      <img class="icon-m float" src="icon_ci_2.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding float">
+      <img class="icon-m " src="icon_ci_2.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Pain Points </P>
+      <div class="blank-lineheight-s"></div>
+
       <P class="t-text-s"> &#183; What are the major pain points</P>
       <P class="t-text-s"> &#183; how long do you spend gardening / day?</P>
 
     </div>
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-bottom">
-      <img class="icon-m float" src="icon_ci_3.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding float">
+      <img class="icon-m " src="icon_ci_3.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Wishlist </P>
+      <div class="blank-lineheight-s"></div>
+
       <P class="t-text-s"> &#183; What kind of service are they using or they wish a
         horticulture website to have.
       </P>
     </div>
   </div>
 
-  <br> <br>
+  <div class="blank-lineheight-l"></div>
   <div class="body-margin">
     <div class="row-change center-v margin">
       <div class="column">
@@ -1245,7 +1240,7 @@
         <!-- finding 4 -->
       </div>
     </div>
-    <br>
+    <div class="blank-lineheight-l"></div>
 
     <div class="column">
       <div class="row">
@@ -1257,10 +1252,14 @@
         whiteboard.
       </p>
     </div>
+    <div class="blank-lineheight-l"></div>
+
     <div class="column margin">
       <P class="t-title-m center-h padding-l">Affinity Mapping Pain Points </P>
       <img class="float" src="affinity_mapping1.svg" alt="User Research" class="image">
     </div>
+    <div class="blank-lineheight-l"></div>
+
     <div class="column margin">
       <P class="t-title-m center-h padding-l">Organize the pain points together into group of
         similar notes
@@ -1268,6 +1267,8 @@
       </P>
       <img class="float" src="affinity_mapping2.svg" alt="User Research" class="image">
     </div>
+    <div class="blank-lineheight-l"></div>
+
     <div class="column margin">
       <P class="t-title-m center-h padding-l">Prioritise and label pain points </P>
       <img class="float" src="affinity_mapping3.svg" alt="User Research" class="image">
@@ -1312,9 +1313,8 @@
         </div>
       </div>
     </div>
-    <br>
+    <div class="blank-lineheight-l"></div>
     <!-- information architecture -->
-
     <div class="column">
       <P class="t-title-m">INFORMATION ARCHITECTURE </P>
       <p class="t-text-m">It shows the features and services under each phase of the application
@@ -1327,6 +1327,8 @@
       </div>
     </div>
     <!-- information architecture -->
+    <div class="blank-lineheight-l"></div>
+
     <!-- user flow -->
     <div class="column">
       <P class="t-title-m">USER FLOW </P>
@@ -2574,10 +2576,14 @@
     </div>
   </div>
   <!-- user flow -->
+  <div class="blank-lineheight-l"></div>
+
   <!-- initial concepts -->
   <div class="body-margin">
     <div class="column body-margin">
       <P class="t-title-m">PURPOSE OF THE APP </P>
+      <div class="blank-lineheight-s"></div>
+
       <p class="t-text-m">Gardeners hub helps the local community developing a horticultural
         marketplace and a relationship between gardeners.Gardeners Hub Application aims to build
         the local market network and improve the horticultural experience by offering more
@@ -2591,12 +2597,12 @@
     </div>
   </div>
 
-  <br>
+  <div class="blank-lineheight-l"></div>
 
   <div class="row center-h bg-color-gh1 align-bottom" id="bg-color-opc2">
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr">
-      <img class="icon-m float" src="icon_concepts1.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+      <img class="icon-m " src="icon_concepts1.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Share &amp; Sell </P>
       <P class="t-text-s"> &#183; Plants Nearby / Map</P>
@@ -2605,8 +2611,8 @@
       <P class="t-text-s"> &#183; Plants by Indoor and Outdoor</P>
     </div>
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr">
-      <img class="icon-m float" src="icon_concepts2.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+      <img class="icon-m " src="icon_concepts2.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Local Social Network </P>
       <P class="t-text-s"> &#183; Local Social Network</P>
@@ -2615,8 +2621,8 @@
       <P class="t-text-s"> &#183; Sharing Plant Decoration Ideas</P>
     </div>
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr">
-      <img class="icon-m float" src="icon_concepts3.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float ">
+      <img class="icon-m " src="icon_concepts3.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Plant Profile </P>
       <P class="t-text-s"> &#183; Plant Photos / Identify plants</P>
@@ -2626,8 +2632,8 @@
       <P class="t-text-s"> &#183; Ventilation</P>
     </div>
     <div
-      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr">
-      <img class="icon-m float" src="icon_concepts4.svg" alt="User Research" class="image">
+      class="column center-v align-top color-grey border-radius item-height-l width-m padding-lr float">
+      <img class="icon-m " src="icon_concepts4.svg" alt="User Research" class="image">
       <P class="h-line"> </P>
       <P class="t-title-m"> Plant Care </P>
       <P class="t-text-s"> &#183; Plants Nearby / Map</P>
@@ -2667,10 +2673,8 @@
         </div>
       </div>
     </div>
-    <br>
+    <div class="blank-lineheight-l"></div>
     <!-- wireframes low-fi -->
-    <P class="t-title-m">LOW-FIDELITY WIREFRAMES </P>
-
     <div class="carouselGH">
       <div class="nav-gh nav-left-gh">
         <img src="../../arrow-left.svg" alt="left">
@@ -2702,8 +2706,9 @@
         <img src="../../arrow-right.svg" alt="left">
       </div>
     </div>
-
     <!-- wireframes low-fi -->
+    <div class="blank-lineheight-l"></div>
+
     <!-- wireframes mid-fi -->
     <P class="t-title-m">MID-FIDELITY WIREFRAMES </P>
 
@@ -2793,7 +2798,7 @@
 
   <div class="bg-color-gh-carouselGH">
 
-    <br>
+    <div class="blank-lineheight-m"></div>
 
     <P class="t-title-m body-margin">HIGH-FIDELITY WIREFRAMES </P>
 
@@ -2888,28 +2893,11 @@
         <img src="../../arrow-right.svg" alt="left">
       </div>
     </div>
-
-
-
+    <div class="blank-lineheight-l"></div>
   </div>
-
-
   <!-- wireframes hi-fi -->
   <!-- 04 -->
-
-
-
-
-
-
-
-
-
-
-
   <!--body-->
-
-
 </body>
 
 
