--- a/photography/index.html
+++ b/photography/index.html
@@ -114,13 +114,8 @@ Interested in what you see? Shoot me an email :) " />
   <!--head-->
   <!--body-->
   <div class="body-margin">
+    <div class="blank-lineheight-xl"></div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <div class="body-landing">
       <div class="body-intro">
         <div class="t-hello" id="t-hello-1550">HELLO, </div>
@@ -174,7 +169,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
 
     <!--Photo 1-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--Photo 2-->
     <div id="ytrigger-pg2">
@@ -196,7 +191,7 @@ Interested in what you see? Shoot me an email :) " />
 
     </div>
     <!--Photo 2-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--Photo 3-->
     <div id="ytrigger-pg3">
@@ -217,7 +212,7 @@ Interested in what you see? Shoot me an email :) " />
 
     </div>
     <!--Photo 3-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--Photo 4-->
     <div>
@@ -241,7 +236,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
 
     <!--Photo 4-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--Photo 5-->
     <div >
@@ -262,7 +257,7 @@ Interested in what you see? Shoot me an email :) " />
 
     </div>
     <!--Photo 5-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--Photo 6-->
     <div id="ytrigger-pg6">
@@ -284,7 +279,7 @@ Interested in what you see? Shoot me an email :) " />
       </div>
     </div>
     <!--Photo 6-->
-    <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
     <!--Photo 7-->
     <div id="ytrigger-pg7">
@@ -306,7 +301,7 @@ Interested in what you see? Shoot me an email :) " />
 
   </div>
   <!--Photo 7-->
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 8-->
   <div id="ytrigger-pg8">
@@ -329,10 +324,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 8-->
-
-
-
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 9-->
   <div id="ytrigger-pg9">
@@ -353,7 +345,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 9-->
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 10-->
   <div id="ytrigger-pg10">
@@ -376,7 +368,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 10-->
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 11-->
   <div id="ytrigger-pg11">
@@ -397,7 +389,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 11-->
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 12-->
 
@@ -421,7 +413,7 @@ Interested in what you see? Shoot me an email :) " />
 
 
 
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 13-->
   <div id="ytrigger-pg13">
@@ -442,7 +434,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 13-->
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 14-->
   <div id="ytrigger-pg14">
@@ -467,7 +459,7 @@ Interested in what you see? Shoot me an email :) " />
   </div>
   <!--Photo 14-->
 
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 15-->
   <div id="ytrigger-pg15">
@@ -488,7 +480,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 15-->
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 16-->
   <div id="ytrigger-pg16">
@@ -513,7 +505,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 16-->
 
 
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 17-->
   <div id="ytrigger-pg17">
@@ -534,7 +526,7 @@ Interested in what you see? Shoot me an email :) " />
     </div>
   </div>
   <!--Photo 17-->
-  <br> <br> <br>
+  <div class="blank-lineheight-xl"></div>
 
   <!--Photo 18-->
   <div id="ytrigger-pg18">
@@ -567,8 +559,8 @@ Interested in what you see? Shoot me an email :) " />
 
   </button>
   <!--back to top-->
-  <br>
-  <br>
+  <div class="blank-lineheight-xl"></div>
+
 
   <!--footer-->
   <div class="footer">
