--- a/project/index.html
+++ b/project/index.html
@@ -117,7 +117,7 @@
 
   <!--body-->
   <div class="body-margin">
-    <br> <br> <br> <br>
+    <div class="blank-lineheight-xl"></div>
 
 
 
@@ -182,10 +182,7 @@
     </div>
 
     <!--GARDENERS HUB-->
-
-
     <br>
-
     <!--MEAL PLANNER-->
     <div id="ytrigger1">
 
@@ -204,7 +201,6 @@
         </div>
       </div>
     </div>
-
     <!--MEAL PLANNER-->
     <br>
     <!--ALLTRAILS-->
@@ -227,14 +223,7 @@
       </div>
     </div>
     <!--ALLTRAILS-->
-
-
     <br>
-
-
-
-
-
     <br>
 
 
